two minor UI changes

--- a/web/templates/results/snp_box.tmpl
+++ b/web/templates/results/snp_box.tmpl
@@ -3,7 +3,7 @@
         <h3># <TMPL_VAR NAME="RS_ID"></h3>
     </div>
     <div class="accordion-inner">
-        <div id="populationBar<TMPL_VAR NAME=COUNT>" class="populationBar"><span id="populationBarValue<TMPL_VAR NAME=COUNT>" value="<TMPL_VAR NAME=PERCENT>" class="populationBarValue"></span></div>
+<!--        <div id="populationBar<TMPL_VAR NAME=COUNT>" class="populationBar"><span id="populationBarValue<TMPL_VAR NAME=COUNT>" value="<TMPL_VAR NAME=PERCENT>" class="populationBarValue"></span></div> -->
         <br />
         <div class="row-fluid">
             <div class="span6">
