removed wandering hash mark

--- a/web/templates/results/snp_box.tmpl
+++ b/web/templates/results/snp_box.tmpl
@@ -1,6 +1,6 @@
 <div class="trait">
     <div class="snp-header">
-        <h3># <TMPL_VAR NAME="RS_ID"></h3>
+        <h3><TMPL_VAR NAME="RS_ID"></h3>
     </div>
     <div class="accordion-inner">
 <!--        <div id="populationBar<TMPL_VAR NAME=COUNT>" class="populationBar"><span id="populationBarValue<TMPL_VAR NAME=COUNT>" value="<TMPL_VAR NAME=PERCENT>" class="populationBarValue"></span></div> -->
