--- a/web/templates/results/snp_box.tmpl
+++ b/web/templates/results/snp_box.tmpl
@@ -7,7 +7,7 @@
         <br />
         <div class="row-fluid">
             <div class="span6">
-                <div class="well"><TMPL_VAR NAME=DESCRIPTION></div>
+                <div class="well"><TMPL_VAR NAME=DESCRIPTION><br><a target="iyg_ensembl" href="http://www.ensembl.org/Homo_sapiens/Location/View?db=core;source=dbSNP;vdb=variation;v=<TMPL_VAR NAME=RS_ID>"><TMPL_VAR NAME=RS_ID> in Ensembl</a></div>
             </div>                                             
             <div class="span6 pull-right">
                 <table class="table">
@@ -28,7 +28,7 @@
                                     </TMPL_IF>
                                 </td>
                                 <td class="genotype centerAndMiddle"><TMPL_VAR NAME=GENOTYPE></td>
-                                <td><TMPL_VAR NAME=DESCRIPTION><br><a target="iyg_ensembl" href="http://www.ensembl.org/Homo_sapiens/Location/View?db=core;source=dbSNP;vdb=variation;v=<TMPL_VAR NAME='RS_ID'>"><TMPL_VAR NAME="RS_ID"> in Ensembl</a></td>
+                                <td><TMPL_VAR NAME=DESCRIPTION></td>
                                 <td class="centerAndMiddle"><TMPL_VAR NAME=POPULATION_FREQ></td>
                             </tr>                              
                         </TMPL_LOOP>                           
