ensembl to variant view, not location

--- a/web/templates/results/snp_box.tmpl
+++ b/web/templates/results/snp_box.tmpl
@@ -7,7 +7,7 @@
         <br />
         <div class="row-fluid">
             <div class="span6">
-                <div class="well"><TMPL_VAR NAME=DESCRIPTION><br><a target="iyg_ensembl" href="http://www.ensembl.org/Homo_sapiens/Location/View?db=core;source=dbSNP;vdb=variation;v=<TMPL_VAR NAME=RS_ID>"><TMPL_VAR NAME=RS_ID> in Ensembl</a></div>
+                <div class="well"><TMPL_VAR NAME=DESCRIPTION><br><a target="iyg_ensembl" href="http://www.ensembl.org/Homo_sapiens/Variation/Summary?v=<TMPL_VAR NAME=RS_ID>"><TMPL_VAR NAME=RS_ID> in Ensembl</a></div>
             </div>                                             
             <div class="span6 pull-right">
                 <table class="table">
