Added template change to add ensembl variation link that was added weeks ago in /var/www but never checked in

--- a/sot-web/secure/templates/trait_box_edit_part_iyg_snps.tmpl
+++ b/sot-web/secure/templates/trait_box_edit_part_iyg_snps.tmpl
@@ -18,6 +18,9 @@
 		  <a target="iyg_ensembl" href="http://www.ensembl.org/Homo_sapiens/Location/View?db=core;source=dbSNP;vdb=variation;v=<TMPL_VAR NAME=snp_id>">Ensembl</a>
 		</div>
 		<div class="span3">
+		  <a target="iyg_ensvar" href="http://www.ensembl.org/Homo_sapiens/Variation/Summary?v=<TMPL_VAR NAME=snp_id>">Ensembl Variation</a>
+		</div>
+		<div class="span3">
 		  <a target="iyg_google_scholar" href="http://scholar.google.com/scholar?hl=en&q=<TMPL_VAR NAME=snp_id>">Google Scholar</a>
 		</div>
 	      </div>
