--- a/web/templates/results/snp_box.tmpl
+++ b/web/templates/results/snp_box.tmpl
@@ -15,7 +15,7 @@
                         <tr>
                             <th class="center">You</th>
                             <th class="center">Genotype</th>
-                            <th>Description</th>
+                            <th>Effect</th>
                             <th class="center">%<i class="icon-info-sign icon-white" rel="tooltip" data-original-title="Percent of sampled population with this result."></i></th>
                         </tr>
                     </thead>
